--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,157 @@
+aenum==3.1.11
 allure-pytest==2.10.0
 allure-python-commons==2.10.0
-assertpy~=1.1
-axe-selenium-python~=2.1.6
-clients~=1.3
-config~=0.5.1
+Appium-Python-Client==2.6.1
+assertpy==1.1
+asttokens==2.0.5
+async-generator==1.10
+atomicwrites==1.4.0
+attrs==21.4.0
+autopep8==1.6.0
+axe-selenium-python==2.1.6
+backcall==0.2.0
+CacheControl==0.12.10
+cachy==0.3.0
+calc==1.0
+certifi==2021.10.8
+cffi==1.15.0
+charset-normalizer==2.0.12
+cleo==0.8.1
+click==8.0.4
+clickclick==20.10.2
+clients==1.3
+clikit==0.6.2
+colorama==0.4.4
+colorclass==2.2.2
+config==0.5.1
+connexion==2.13.1
+crashtest==0.3.1
+cryptography==36.0.2
+cycler==0.11.0
+debugpy==1.6.0
+decorator==5.1.1
+delayed-assert==0.3.6
+dill==0.3.4
+distlib==0.3.6
+docopt==0.6.2
+entrypoints==0.4
+execnet==1.9.0
+executing==0.8.3
+Faker==13.3.3
+filelock==3.6.0
+Flask==2.1.2
+fonttools==4.31.1
+greenlet==1.1.2
+h11==0.13.0
+html5lib==1.1
+httpcore==0.13.2
+httpretty==1.1.4
+httpx==0.18.1
+idna==3.3
+importlib-metadata==4.11.3
+inflection==0.5.1
+iniconfig==1.1.1
+ipykernel==6.13.0
+ipython==8.3.0
+itsdangerous==2.1.2
+jedi==0.18.1
+Jinja2==3.1.2
+jsonschema==4.5.1
+jupyter-client==7.3.1
+jupyter-core==4.10.0
+keyring==23.5.0
+kiwisolver==1.4.0
+lockfile==0.12.2
+lxml==4.8.0
+MarkupSafe==2.1.1
+matplotlib==3.5.1
+matplotlib-inline==0.1.3
+mock==4.0.3
+msgpack==1.0.3
+names==0.3.0
+nest-asyncio==1.5.5
+numpy==1.23.0
+outcome==1.1.0
+packaging==20.9
+parso==0.8.3
+pastel==0.2.1
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==9.0.1
+pip-review==1.2.0
+pip-upgrader==1.4.15
 pipenv==2022.9.8
-pytest
-pytest-reportportal~=5.1.2
-pytest-xdist
+pkginfo==1.8.2
+platformdirs==2.5.1
+playwright==1.23.0
+pluggy==1.0.0
+poetry==1.1.13
+poetry-core==1.0.8
+prompt-toolkit==3.0.29
+psutil==5.9.0
+ptyprocess==0.7.0
+pure-eval==0.2.2
+py==1.11.0
+pycodestyle==2.8.0
+pycparser==2.21
+pydantic==1.9.0
+pyee==8.1.0
+pyfiglet==0.8.post1
+Pygments==2.12.0
+pylenium==1.0
+pyleniumio==1.14.2
+pylev==1.4.0
+pyOpenSSL==22.0.0
+pyparsing==3.0.7
+pyrsistent==0.18.1
+PySocks==1.7.1
+pytest==7.1.3
+pytest-assume==2.4.3
+pytest-base-url==2.0.0
+pytest-forked==1.4.0
+pytest-html==3.1.1
+pytest-metadata==2.0.1
+pytest-parallel==0.1.1
+pytest-playwright==0.3.0
+pytest-reportportal==5.1.2
+pytest-xdist==2.5.0
+pytest_check==1.0.1
+python-dateutil==2.8.2
+python-dotenv==0.21.0
+python-slugify==6.1.2
+pywin32==304
+pywin32-ctypes==0.2.0
+PyYAML==6.0
+pyzmq==22.3.0
+reportportal-client==5.2.3
+requests==2.28.1
+requests-toolbelt==0.9.1
+rfc3986==1.5.0
 selenium==4.4.3
+shellingham==1.5.0
+six==1.16.0
+sniffio==1.3.0
+sortedcontainers==2.4.0
+stack-data==0.5.0
+tblib==1.7.0
+terminaltables==3.1.10
+text-unidecode==1.3
+toml==0.10.2
+tomli==2.0.1
+tomlkit==0.11.4
+tornado==6.2
+tqdm==4.64.1
+traitlets==5.4.0
+trio==0.21.0
+trio-websocket==0.9.2
+typing_extensions==4.3.0
+urllib3==1.26.9
 virtualenv==20.16.5
 virtualenv-clone==0.5.7
+wcwidth==0.2.5
 webdriver-manager==3.8.3
-appium-python-client>=2.6.1
-requests==2.28.1
+webencodings==0.5.1
+websockets==10.1
+Werkzeug==2.1.2
+wsproto==1.1.0
+zipp==3.7.0
