updates | test executed successfully

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,4 @@
 [pytest]
-addopts = -s -vv tests/test_execution.py --maxfail=2 --tb=line --alluredir=reports/allure --html=../file_reports/spc_reports.html --junitxml="../file_reports/spc.xml"
-
+addopts = -s -v tests/test_execution.py
+-alluredir=reports/allure
 log_file = logs/pytest-logs.txt
